fixing input zoom in on mobile issue

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,3 +22,7 @@ body {
     position: relative !important;
   }
 }
+
+.p-component input {
+  font-size: 1rem;
+}
